--- a/index.html
+++ b/index.html
@@ -4,8 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="menu-search">
+            <a class="menu" href="#"><img src="menu.png" alt="menu"></a>
+            <a class="search" href="#"><img src="search.png" alt="search"></a>
+            <a class="space" href="#"><strong>SPACE & COSMOS </strong></a>
+        </div>
+        <div class="logo">
+            <a href=""><img class="new-york-logo" src="Logo.png" alt="logo"></a>
+        </div>
+        <div class="subscribe-and-login-button">
+            <button class="subscribe">SUBSCRIBE NOW</button>
+            <button class="login">LOG IN</button>
+        </div>
+    </header>
+    <section class="advertise">
+
+    </section>
+    <section class="space-ripples">
+        <h1>Space Ripples Reveal Big Bang’s <br>Smoking Gun</h1>
+        <div class="social-option">
+            <span><a href=""><img src="assets used\facebook2.png" alt=""></a></span>
+            <span><a href=""><img src="assets used\twitter.png" alt=""></a></span>
+            <span><a href=""><img src="assets used\email-24px.svg" alt=""></a></span>
+            <span><a href=""><img src="assets used\reply-24px.svg" alt=""></a></span>
+            <span><a href=""><img src="assets used\chat_bubble_outline-24px.svg" alt=""></a></span>
+        </div>
+        <figure>
+            <img class="cosmos1" src="assets used\cosmos.jpg" alt="">
+            <figcaption> Alan Guth was one of the first physicists to hypothesize the existence of inflation, 
+                which explains how the universe expanded so uniformly and so quickly in the instant after the 
+                Big Bang 13.8 billion years ago.
+                <span>Rick Friedman for The New York Times</span>
+            </figcaption>
+        </figure>
+        <div class="article">
+            <a href="">By Dennis Overbye</a>
+            <h4>March 17, 2014</h4>
+            <p>CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.</p>
+            <p>He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.</p>
+            <p>If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.</p>
+            <p>“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.</p>
+        </div>
+    </section>
+    <section class="advertise">
+
+    </section>
+    <div class="article">
+        <p>On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they had seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.</p>
+        <p>Reaching back across 13.8 billion years to the first sliver of cosmic time with telescopes at the South Pole, a team of astronomers led by John M. Kovac of the Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of space-time — so-called gravitational waves — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.</p>
+        <div>
+            <h5>Unlock more free articles</h5>
+            <a href="#">Create and Account or log in</a>
+        </div>
+        <p>Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.</p>
+        <p>If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and energy to science and speculation.</p>
+        <p>Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.</p>
+    </div>
+    <section class="advertise">
+
+    </section>
+    <div class="article">
+        <h2>‘As Big as It Gets’</h2>
+        <p>In our own universe, it would serve as a window into the forces operating at energies forever beyond the reach of particle accelerators on Earth and yield new insights into gravity itself. Dr. Kovac’s ripples would be the first direct observation of gravitational waves, which, according to Einstein’s theory of general relativity, should ruffle space-time.</p>
+        <p>Marc Kamionkowski of Johns Hopkins University, an early-universe expert who was not part of the team, said, “This is huge, as big as it gets.”</p>
+        <p>He continued, “This is a signal from the very earliest universe, sending a telegram encoded in gravitational waves.”</p>
+        <p>The ripples manifested themselves as faint spiral patterns in a bath of microwave radiation that permeates space and preserves a picture of the universe when it was 380,000 years old and as hot as the surface of the sun.</p>
+        <p>Dr. Kovac and his collaborators, working in an experiment known as Bicep, for Background Imaging of Cosmic Extragalactic Polarization, reported their results in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers submitted to The Astrophysical Journal.</p>
+        
+    </div>
+    <div class="points">
+        <div class="points-title">
+            <h2>The Theory of Inflation</h2> <br>
+            <p>Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</p>
+        </div>
+        <div class="points-list">
+            <figure >
+                <img class="1" src="assets used\1.png" alt="">
+                <figcaption><span>THE UNIVERSE </span>is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</figcaption>
+            </figure>
+            <figure>
+                <img class="2" src="assets used\2.png" alt="">
+                <figcaption><span>NOT ENOUGH TIME </span> The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.</figcaption>
+            </figure>
+            <figure>
+                <img class="3" src="assets used\3.png" alt="">
+                <figcaption><span>DISTANT COFFEE </span> At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled.</figcaption>
+            </figure>
+            <figure>
+                <img class="4" src="assets used\4.png" alt="">
+                <figcaption><span>COFFEE EVERYWHERE </span> Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.</figcaption>
+            </figure>
+        </div>
+    </div>
 </body>
 </html>
