--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <div class="article">
         <p>On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they had seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.</p>
         <p>Reaching back across 13.8 billion years to the first sliver of cosmic time with telescopes at the South Pole, a team of astronomers led by John M. Kovac of the Harvard-Smithsonian Center for Astrophysics detected ripples in the fabric of space-time — so-called gravitational waves — the signature of a universe being wrenched violently apart when it was roughly a trillionth of a trillionth of a trillionth of a second old. They are the long-sought smoking-gun evidence of inflation, proof, Dr. Kovac and his colleagues say, that Dr. Guth was correct.</p>
-        <div>
-            <h5>Unlock more free articles</h5>
+        <div id="unlock">
+            <h5>Unlock more free articles</h5> <br>
             <a href="#">Create and Account or log in</a>
         </div>
         <p>Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.</p>
@@ -270,23 +270,50 @@
                 </ul>
             </div>
             <div>
-                <ul>
-                    <li>NEWS</li>
-                    <li><a href="">Home Page</a></li>
-                    <li><a href="">World</a></li>
-                    <li><a href="">Coronavirus</a></li>
-                    <li><a href="">U.S.</a></li>
-                    <li><a href="">Politics</a></li>
-                    <li><a href="">Election Result</a></li>
-                    <li><a href="">New York</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Science</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Obituaries</a></li>
+                <ul id="subscribe">
+                    <li><strong>SUBSCRIBE</strong></li>
+                    <li><a class="strong" href=""> <strong> Home Delivery </strong></a></li>
+                    <li><a class="strong" href=""><strong>Digital Subscriptions</strong></a></li>
+                    <li><a class="strong" href=""><strong>Games</strong></a></li>
+                    <li><a class="strong" href=""><strong>Cooking</strong></a></li>
+                    <li id="light"><a class="light" href="">Email Newletter</a></li>
+                    <li><a class="light1" href="">Coporate Subscriptions</a></li>
+                    <li id="light2"><a class="light" href="">Education Rate</a></li>
+                    <li><a class="light1" href="">Mobile Application</a></li>
+                    <li><a class="light1" href="">Replica Edition</a></li>
+                    <li><a class="light1" href="">International</a></li>
+                    <li><a class="light1" href="">Canada</a></li>
+                    <li><a class="light1" href="">Español</a></li>
+                    <li><a class="light1" href="">中文网</a></li>
                 </ul>
             </div>
         </div>
+        <div class="last-footer">
+            <span><a href="">&copy; 2020 The New York Times Company</a></span>
+            <span><a href="">NYTCo</a></span>
+            <span><a href="">Contact Us</a></span>
+            <span><a href="">Work with Us</a></span>
+            <span><a href="">Advertise</a></span>
+            <span><a href="">T Brand Studio</a></span>
+            <span><a href="">Your ad Choices</a></span>
+            <span><a href="">Privacy Policy</a></span>
+            <span><a href="">Terms of Service</a></span>
+            <span><a href="">Terms of Sale</a></span>
+            <span><a href="">Site Map</a></span>
+            <span><a href="">Help</a></span>
+            <span><a href="">Subscriptions</a></span>
+        </div>
+        
     </footer>
+    <div class="expand">
+        <div class="expand-work">
+            <div class="expand-work-access">
+                <a href="">Access More of the times by creating a free account or logging in</a>
+            </div>
+            <div class="expand-work-expand">
+                <a href="">Expand</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
