Change my point list display from flex to grid

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header class="header">
         <div class="menu-search">
-            <a class="menu" href="#"><img src="menu.png" alt="menu"></a>
-            <a class="search" href="#"><img src="search.png" alt="search"></a>
+            <a class="menu" href="#"><img src="./assets used/menu.png" alt="menu"></a>
+            <a class="search" href="#"><img src="./assets used/search.png" alt="search"></a>
             <a class="space" href="#"><strong>SPACE & COSMOS </strong></a>
         </div>
         <div class="logo">
-            <a href=""><img class="new-york-logo" src="Logo.png" alt="logo"></a>
+            <a href=""><img class="new-york-logo" src="./assets used/Logo.png" alt="logo"></a>
         </div>
         <div class="subscribe-and-login-button">
             <button class="subscribe">SUBSCRIBE NOW</button>
